# audio-engine

./: .gitmodules  README.md  README_JA.md
dart/audio_engine/: .gitignore  .metadata  README.md  analysis_options.yaml  contributing.md  package.json  protoc.sh  pubspec.yaml
dart/audio_engine/example/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
dart/audio_engine/ios/: audio_engine.podspec
dart/audio_engine/lib/: foundation.dart  fs.dart  test_utils.dart  v1alpha1.dart
dart/audio_engine/linux/: CMakeLists.txt  audio_engine_plugin.cc  audio_engine_plugin_private.h
dart/audio_engine/macos/: audio_engine.podspec
dart/audio_engine/windows/: CMakeLists.txt  audio_engine_plugin.cpp  audio_engine_plugin.h  audio_engine_plugin_c_api.cpp  callback_message.h
dart/audio_engine_examples/: .gitignore  README.md  package.json  pubspec.yaml  run_integration_test.sh
dart/audio_engine_examples/example/: utils.dart
dart/audio_engine_examples/integration_test/: example_runner_test.dart
dart/audio_engine_examples/linux/: CMakeLists.txt  my_application.cc
dart/audio_engine_examples/web/: index.html  manifest.json
dart/audio_engine_examples/windows/: CMakeLists.txt
dart/audio_engine_flutter_libs/: .metadata  README.md  pubspec.yaml
dart/audio_engine_protoc_plugin/: README.md  example.proto  package.json  pubspec.yaml
dart/nam/: README.md  package.json  pubspec.yaml
dart/nam/example/: README.md  (+3 more)
dart/uds_win/: .gitignore  package.json  pubspec.yaml
doc/: audio-engine-api.md  nam-v1.md  sequences.md
doc/ja/: audio-engine-api.md
docs/en/: audio-engine-api.md  nam-v1.md
docs/ja/: nsp-v1.md
sonora/: .clang-format  .gitignore  CMakeLists.txt  README.md  README_JA.md  app-bridge-plugin.md  contributing.md  debugging.md  package.json  protoc.sh
sonora/AppBridgePlugin/: CMakeLists.txt  PluginDevEditor.h  PluginProcessor.cpp  PluginProcessor.h
sonora/AppBridgePlugin/Settings/: Settings.cpp  Settings.h  SettingsFile.h
sonora/AppBridgePlugin/Utils/: JsonUtils.h
sonora/AudioEngineLibrary/: AudioEngineCApi.cpp  CMakeLists.txt  CallbackMessage.h  DartPortMessageSender.h  MessageLoopThread.h  MessageManagerPlatformIntegration.cpp  MessageManagerPlatformIntegration.h  State.cpp  State.h  StatusCode.h
sonora/AudioEngineLibrary/Include/: AudioEngineCApi.h
sonora/AudioEngineLibrary/Utils/: GetCurrentThreadId.h  GetMainThreadId.h
sonora/AudioEngineService/: CMakeLists.txt  Main.cpp
sonora/CMake/: add_juce_modules_library.cmake  glob_files.cmake  target_source_directory.cmake
sonora/Documents/Japanese/: app-bridge-plugin.md  class-diagram.md
sonora/Examples/: CMakeLists.txt
sonora/Examples/App/: CMakeLists.txt  Main.cpp  MainComponent.cpp
sonora/Examples/Common/: Scenario.cpp  Scenario.h  ScenarioListComponent.h
sonora/Examples/Plugin/: CMakeLists.txt  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
sonora/Examples/RtSession/: CMakeLists.txt  Main.cpp  MainComponent.h
sonora/Modules/: CMakeLists.txt
sonora/Modules/AudioDeviceManager/: CMakeLists.txt
sonora/Modules/AudioDeviceManager/AudioDeviceManager/: AudioDeviceManager.cpp  AudioDeviceManager.h
sonora/Modules/AudioEngineCore/: CMakeLists.txt
sonora/Modules/AudioEngineCore/Impl/: ArrangementService.cpp  AudioEngine.cpp  AudioService.cpp  DebugUtilityService.cpp  DeviceStateBroadcaster.h  EngineKernel.cpp  EngineKernel.h  LoopPlayheadSynchroniser.cpp  LoopPlayheadSynchroniser.h  ParameterChangeTracker.h  PluginStateSerializer.h  PluginWindow.cpp  PluginWindow.h  SamplerSpecificCommandHandler.h  StudioService.cpp  TracktionUtilities.h  TransportService.cpp
sonora/Modules/AudioEngineCore/Impl/Docs/: LoopPlayheadSynchroniser_Prompt.md
sonora/Modules/AudioEngineCore/Impl/Utils/: BuiltInPluginDescriptions.cpp  BuiltInPluginDescriptions.h  IdGenerator.h  IdMapper.h  Logger.cpp
sonora/Modules/AudioEngineCore/Include/AudioEngineCore/: ArrangementService.h  AudioEngine.h  AudioService.h  DebugUtilityService.h  DeviceSpecificCommand.h  StudioService.h  TransportService.h
sonora/Modules/AudioEngineCore/Include/AudioEngineCore/Common/: Errors.h  Ids.h  Time.h
sonora/Modules/AudioEngineCore/Include/AudioEngineCore/Utils/: CallbackThread.h  CallbackTimer.h  ExecuteAfterDelay.h  GetProcessId.h  LogFile.h  Logger.h
sonora/Modules/AudioEngineProto/: CMakeLists.txt
sonora/Modules/AudioEngineProto/google/api/: client.pb.cc  client.pb.h  field_behavior.pb.cc  field_behavior.pb.h  field_info.pb.cc  field_info.pb.h  launch_stage.pb.cc  launch_stage.pb.h  resource.pb.cc  resource.pb.h
sonora/Modules/AudioEngineProto/google/protobuf/: any.pb.cc  any.pb.h  duration.pb.cc  duration.pb.h  empty.pb.cc  empty.pb.h  field_mask.pb.cc  field_mask.pb.h  struct.pb.cc  struct.pb.h  timestamp.pb.cc  timestamp.pb.h
sonora/Modules/AudioEngineProto/google/rpc/: code.pb.cc  code.pb.h
sonora/Modules/AudioEngineProto/novonotes/audio_engine/v1alpha1/: audio_region.pb.cc  audio_region.pb.h  connection.pb.cc  connection.pb.h  debug_utility.pb.cc  debug_utility.pb.h  device_descriptor.pb.cc  device_descriptor.pb.h  device_instance.pb.cc  device_instance.pb.h  engine_management.pb.cc  engine_management.pb.h  rt_session.pb.cc  rt_session.pb.h  track.pb.cc  track.pb.h  transport.pb.cc  transport.pb.h
sonora/Modules/AudioEngineProto/novonotes/audio_engine/v1alpha1/type/: body_type.pb.cc  body_type.pb.h  engine_error.pb.cc  engine_error.pb.h
sonora/Modules/Nam/: CMakeLists.txt
sonora/Modules/Nam/Nam/: Nam.h
sonora/Modules/ProtoMessageHandler/: CMakeLists.txt
sonora/Modules/ProtoMessageHandler/ProtoMessageHandler/: Delegates.h  Endpoint.h  ParameterSyncKey.h  ProtoMessageHandler.h  RtCommandHandler.h  RtSessionManager.h  RtStateBroadcaster.h
sonora/Modules/ProtoMessageHandler/ProtoMessageHandler/Utils/: ProtoToJson.h  StructToVar.cpp  StructToVar.h
sonora/Modules/ProtoMessageHandler/ProtoMessageHandler/V1Alpha1/: HandlerV1Alpha1.cpp  HandlerV1Alpha1.h  PbConverter.h
sonora/Modules/SocketIo/: CMakeLists.txt
sonora/Modules/SocketIo/SocketIo/: SocketClient.cpp  SocketClient.h  UdpChannel.h
(+156 files in other folders)
